[Mac] Omnibox text and icon spacing

- Moved the BubbleDecoration one pt to the left
- Moved the Omnibox text one pt to the left

BUG=666990, 666977

Review-Url: https://codereview.chromium.org/2520003007
Cr-Commit-Position: refs/heads/master@{#434929}

Former-commit-id: c3a5825e0723184c3f72bffdc916035249318390